# RSA_CPP

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
ciphertext/: file.dec  file.enc  plaintext.enc
inc/: RSA.h  main.h  utils.h
key/: private.key  pub.key  public.key  pvt.key
plaintext/: file.txt
src/: GenLargePrime.cpp  RSA.cpp  utils.cpp
